# task-manager

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/v1/: auth.py  tasks.py  users.py
app/core/: auth.py  cache.py  config.py  database.py  dependencies.py  worker.py
app/domain/: notification.py  task.py  user.py
app/infrastructure/: celery_notification.py  task_repository.py  user_repository.py
app/infrastructure/worker_tasks/: send_email.py
app/schemas/: task.py  user.py
app/use_cases/: task_usecase.py  user_usecase.py
request_collections/: task-manager-bruno.json  task-manager-postman.json
tests/: conftest.py  test_tasks.py  test_users.py
